samples/_failures_safe/1761660563_35066a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0475386a.c: In function ‘main’:
./samples/SAFE/__tmp_0475386a.c:166:11: error: expected ‘;’ at end of input
  166 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_0475386a.c:166:5: error: expected declaration or statement at end of input
  166 |     printf
      |     ^~~~~~
